# simple-crud-py

./: .env.example  .gitignore  Dockerfile  INICIO_RAPIDO.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/api/endpoints/: books.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/db/models/: book.py  libro.py  user.py  usuario.py
sql/: drop_tables.sql
