[tool.poetry]
name = "simple-crud-py"
version = "0.1.0"
description = "Simple CRUD con FastAPI y SQLModel con PostgreSQL como base de datos."
authors = ["Adrián Constante <ad_con.reload@proton.me>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.2.1"
fastapi = "^0.117.1"
uvicorn = { extras = ["standard"], version = "^0.37.0" }
sqlmodel = "^0.0.25"
psycopg2-binary = "^2.9.8"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
